# utilities

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
CFSIV_utilities_package.egg-info/: PKG-INFO  SOURCES.txt
cfsiv_utils/: WebScraping.py  filehandling.py  log_handling.py  time_strings.py
tests/unit/: test_filehandling.py
utils/: filehandling.py
